feat(spec): Add Oauth2 authorize endpoint
